[gd_scene load_steps=4 format=3 uid="uid://drgv73tlsrekt"]

[ext_resource type="PackedScene" uid="uid://c5u48c0bm4as6" path="res://game/enemies/enemy/enemy.tscn" id="1_snc14"]
[ext_resource type="Script" path="res://game/enemies/enemy/shooting_enemy.gd" id="2_1kq4v"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="2_gyh0k"]

[node name="ShootingEnemy" instance=ExtResource("1_snc14")]
script = ExtResource("2_1kq4v")
has_target = false

[node name="SpawnerComponent" type="Node2D" parent="." index="2"]
script = ExtResource("2_gyh0k")

[node name="FireRateTimer" type="Timer" parent="." index="3"]

[node name="ShootingMarker" type="Marker2D" parent="." index="4"]
